flickering prevention on page load

--- a/collective/azindexpage/browser/page.css
+++ b/collective/azindexpage/browser/page.css
@@ -18,3 +18,6 @@
     font-weight: bold;
     border: 1px solid
 }
+.noword {
+	display: none;
+}
